testsuite/tests/grammar/invalid_token_rule/unknown-token.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- Example(@no_such_token)
}
